<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentMonthActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:id="@+id/scrollView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/month_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/current_month" />

        <ListView
            android:id="@+id/month_statistic"
            android:layout_below="@+id/month_title"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingTop="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"/>

        <LinearLayout
            android:id="@+id/month_salary_container"
            android:layout_below="@+id/month_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/enter_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/btnpress"
                android:onClick="setMonthSalary"
                android:text="@string/save_month_salary"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/deal_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:maxWidth="80dp"
                android:text="0"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/month_calendar"
            android:layout_below="@+id/month_salary_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:paddingEnd="15dp"
                android:layout_weight="5"
                android:text="@string/chose_day"/>

            <Spinner
                android:id="@+id/days_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:contentDescription="@string/choose_month"
                android:gravity="start"
                android:minHeight="50dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/edit_day"
            android:layout_below="@+id/month_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_day"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@id/main_day_table_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_day"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/main_day_table_title" />

        <TextView
            android:id="@+id/current_day_total"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/current_day_table"
            android:layout_alignParentEnd="true"
            android:text="0" />

        <ListView
            android:id="@+id/current_day_table"
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:layout_below="@+id/main_day_table_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:paddingTop="5dp"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/nav_button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_day"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_main" />

        <ImageButton
            android:id="@+id/nav_button_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_month"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_CM" />

        <ImageButton
            android:id="@+id/nav_button_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="?android:attr/actionModeFindDrawable"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_brif" />

        <ImageButton
            android:id="@+id/nav_button_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_pref" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>