<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:text="@string/preferences" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/table">

            <TableRow
                android:background="@drawable/table">
                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/pref_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:autofillHints="15300"
                    android:inputType="number"
                    android:minHeight="48dp"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            </TableRow>

                <TableRow
                android:background="@drawable/table">
                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/pref_tax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:autofillHints="13"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                </TableRow>

                <TableRow
                android:background="@drawable/table">
                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/foreman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/pref_foreman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:autofillHints="5"
                        android:inputType="number"
                        android:minHeight="48dp"
                        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

                </TableRow>
            </TableLayout>
            <Button
                android:id="@+id/pref_btn_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btnpress"
                android:onClick="save"
                android:text="@string/save" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="10dp">

                <ListView
                    android:id="@+id/pref_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/nav_button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_day"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_main" />

        <ImageButton
            android:id="@+id/nav_button_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_month"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_CM" />

        <ImageButton
            android:id="@+id/nav_button_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="?android:attr/actionModeFindDrawable"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_brif" />

        <ImageButton
            android:id="@+id/nav_button_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/btn_to_pref" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>